# forge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pyrightconfig.json
.github/workflows/: ci-lint.yml  ci-test.yml  ci.yml  docker-publish.yml  mypy.yml  publish-l6e-forge-cli.yml  publish-l6e-forge-core.yml  pypi-publish.yml  pytest.yml  ruff.yml
agent_forge/cli/: __init__.py  chat.py  create.py  dev.py  main.py  models.py  package.py  template.py
agent_forge/config_managers/: toml.py
agent_forge/dev/: __init__.py  reloader.py  service.py
agent_forge/infra/: compose.py
agent_forge/logging/: base.py
agent_forge/monitor/: inmemory.py  remote.py
agent_forge/runtime/: base.py  local.py  monitoring.py
agent_forge/tools/: base.py  code.py  filesystem.py  terminal.py  web.py
agent_forge/types/: README.md  __init__.py  agent.py  config.py  core.py  ecosystem.py  error.py  event.py  memory.py  model.py  testing.py  tool.py  workspace.py
agent_forge/web/: api_app.py  api_main.py  monitor_app.py  monitor_main.py
docs/: auto-routing.md  cli-and-architecture-design.md  cli.md  config-file-formats-proposal.md  getting-started.md  inspecting-l6e-packages.md  installing-agents.md  out-of-the-box-agent-stack.md  packaging-agents.md  using-prompt-builder.md
docs/memory/: using-collections.md
docs/prompt/: agent-forge-context-prompt.md  frontend-agent-prompt.md  memory-store-todos.md  things-to-wow.md
examples/: docker-compose.example-workspace.yml
examples/example-workspace/: .gitignore  docker-compose.yml  forge.toml
examples/second-workspace-test-install/: docker-compose.yml  forge.toml
examples/second-workspace-test-install/agents/test-demo/: config.toml  pyproject.toml
examples/test-workspace/: docker-compose.yml  forge.toml
infra/docker/: Dockerfile.api  Dockerfile.monitor  Dockerfile.ui  README.md
l6e_forge/cli/: chat.py  create.py  main.py  memory.py  models.py  package.py  template.py
l6e_forge/dev/: handler.py
l6e_forge/infra/: compose.py
l6e_forge/models/: auto.py
l6e_forge/monitor/: base.py  inmemory.py  remote.py
l6e_forge/prompt/: loader.py
l6e_forge/runtime/: base.py  local.py
l6e_forge/types/: README.md  __init__.py  agent.py  config.py  core.py  event.py  memory.py  model.py  tool.py  workspace.py
l6e_forge/web/: __init__.py  api_app.py  monitor_app.py  monitor_main.py
my-workspace/: forge.toml
scripts/: build-testpypi.sh
site/agent-ui/: .env  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts
site/docs/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
site/l6e/: package-lock.json  package.json  pnpm-lock.yaml
tests/integration/: test_cli.py  test_pkg_cli.py
tests/unit/: test_auto_models.py  test_compose_template.py  test_config_manager.py  (+6 more)
tmp-workspace/: forge.toml
(+153 files in other folders)
