[project]
name = "agent-forge"
version = "0.1.0"
description = "Build & Deploy local agents with ease - alpha"
authors = [
    {name = "Bennett Dixon",email = "bennettdixon16@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
name = "agent-forge"
version = "0.1.0"
description = "Build & Deploy local agents with ease - alpha"
authors = ["Bennett Dixon <bennettdixon16@gmail.com>"]
packages = [
    { include = "agent_forge" }
]

[tool.poetry.group.cli.dependencies]
rich = ">=14.1.0,<15.0.0"
typer = ">=0.16.0,<0.17.0"
watchdog = ">=4.0.0,<5.0.0"
prompt_toolkit = ">=3.0.0,<4.0.0"
httpx = ">=0.27.0,<1.0.0"
jinja2 = ">=3.1.0,<4.0.0"

[tool.poetry.group.monitor]
optional = true

[tool.poetry.group.monitor.dependencies]
fastapi = ">=0.115.0,<0.116.0"
uvicorn = ">=0.30.0,<0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
mypy = "^1.17.1"
pytest-asyncio = "^1.1.0"
pynacl = "^1.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
forge = "agent_forge.cli.main:main"
