[tool.poetry]
name = "forge-monorepo"
version = "0.0.0"
description = "Dev meta-package for l6e/forge monorepo (not published)"
authors = ["l6e AI <hello@l6e.ai>"]
# Ensure we don't accidentally package any code from the root
packages = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
# Install both packages in editable mode for development
l6e-forge = { path = "packages/core", develop = true }
l6e-forge-cli = { path = "packages/cli", develop = true }

[tool.poetry.group.cli.dependencies]
rich = ">=14.1.0,<15.0.0"
typer = ">=0.16.0,<0.17.0"
watchdog = ">=4.0.0,<5.0.0"
prompt_toolkit = ">=3.0.0,<4.0.0"
httpx = ">=0.27.0,<1.0.0"
jinja2 = ">=3.1.0,<4.0.0"
questionary = ">=2.0.1,<3.0.0"

[tool.poetry.group.agent]
optional = true

[tool.poetry.group.agent.dependencies]
jinja2 = ">=3.1.0,<4.0.0"

[tool.poetry.group.monitor]
optional = true

[tool.poetry.group.monitor.dependencies]
fastapi = ">=0.115.0,<0.116.0"
uvicorn = ">=0.30.0,<0.31.0"
asyncpg = ">=0.30.0,<0.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
mypy = "^1.17.1"
pytest-asyncio = "^1.1.0"
pynacl = "^1.5.0"
redis  = ">=6.4.0,<7.0.0"
twine = "^6.1.0"
ruff = "^0.12.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

