[project]
name = "test-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Bennett Dixon",email = "bennettdixon16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis (>=6.4.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
